# speed_develop

./: .gitignore
src/: Readme.md  机械臂软件架构设计.docx
src/aichem_msg_srv/: CMakeLists.txt  package.xml
src/arm/: readme.md
src/arm/Universal_Robots_ROS_Driver/ur_calibration/launch/: calibration_correction.launch
src/arm/Universal_Robots_ROS_Driver/ur_robot_driver/: CMakeLists.txt
src/arm/Universal_Robots_ROS_Driver/ur_robot_driver/config/: rosconsole.config  ur5e_controllers.yaml
src/arm/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur5e_bringup.launch
src/arm/Universal_Robots_ROS_Driver/ur_robot_driver/resources/: example_rviz_config.rviz
src/arm/Universal_Robots_ROS_controllers_cartesian/: README.md
src/arm/Universal_Robots_ROS_controllers_cartesian/twist_controller/: CMakeLists.txt
src/arm/Universal_Robots_ROS_controllers_cartesian/twist_controller/src/: twist_controller.cpp
src/arm/cartesian_state_msgs/: CMakeLists.txt
src/arm/cartesian_state_msgs/msg/: CartesianState.msg
src/arm/chemicalrobot_arm/chemicalrobot_arm/chemicalrobot_arm/: CMakeLists.txt  Doxyfile  package.xml
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/: CMakeLists.txt  package.xml  startsys.sh
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Config/: rosconsole.config  station_name_map.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Data/: charge_station.json  map_center.json  人工工作站.json  光催化工作站.json  光催化工作站贰.json  吸液工作站.json  固体进样站.json  固体进样站壹.json  封装工作站.json  新离心工作站.json  新离心工作站贰.json  机械臂关节.json  气体拉曼工作站.json  气相色谱工作站.json  液体进样站.json  液体进样站壹.json  烘干工作站.json  烘干工作站壹.json  电催化工作站.json  磁力搅拌站.json  磁力搅拌站壹.json  磁力搅拌站贰.json  表征平台中转工作站.json  起始样品架.json  超声工作站.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Data(JSLZ)/: charge_station.json  固体进样站.json  新离心工作站.json  机械臂关节.json  烘干工作站.json  磁力搅拌站.json  起始样品架.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Data(KJG)/: 光催化工作站.json  机械臂关节.json  液体进样站.json  液体进样站壹.json  电催化工作站.json  磁力搅拌站.json  起始样品架.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Data(SU ZHOU)/: charge_station.json  map_center.json  光催化工作站.json  新离心工作站.json  机械臂关节.json  液体进样站.json  烘干工作站.json  磁力搅拌站.json  紫外光谱工作站.json  荧光光谱工作站.json  起始样品架.json  超声清洗机.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Data(USTC)/: 光催化工作站.json  光催化工作站贰.json  吸液工作站.json  固体进样站.json  固体进样站壹.json  封装工作站.json  新离心工作站.json  机械臂关节.json  液体进样站.json  烘干工作站.json  电催化工作站.json  磁力搅拌站.json  磁力搅拌站壹.json  磁力搅拌站贰.json  表征平台中转工作站.json  起始样品架.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Data(USTC-PLATFORM)/: LIBS工作站.json  XRD工作站.json  拉曼光谱工作站.json  换手工作站.json  机器人物料站.json  机械臂关节.json  电催化工作站.json  紫外光谱工作站.json  红外光谱工作站.json  荧光光谱工作站.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/Data(ZHEN ZHOU)/: charge_station.json  光催化工作站.json  固体进样站.json  封装工作站.json  新离心工作站.json  机械臂关节.json  液体进样站.json  烘干工作站.json  磁力搅拌站.json  起始样品架.json  超声工作站.json
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/doc/: 架构设计.docx
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/include/: chemical_common.h  chemical_platform_system.h  chemical_util.h
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/launch/: chemicalrobot_arm_new.launch
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/scripts/: PGI_control.py  fake_dms.py  fake_navigation_in.py  loop_dms.py
src/arm/chemicalrobot_arm_new/chemicalrobot_arm_new/src/: chemical_platform_system.cpp  main.cpp  util.cpp
src/arm/robotiq_ft_sensor/: CMakeLists.txt
src/arm/robotiq_ft_sensor/config/: filter.yaml
src/arm/robotiq_ft_sensor/include/robotiq_ft_sensor/: filter.h
src/arm/robotiq_ft_sensor/launch/: ft_sensor.launch
src/arm/robotiq_ft_sensor/nodes/: filter.cpp  rq_sensor.cpp
src/arm/universal_robot/universal_robots/: package.xml
src/arm/universal_robot/ur5e_tfsensor_pgi140_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm/universal_robot/ur_description/: package.xml
src/arm/universal_robot/ur_gazebo/: CMakeLists.txt  package.xml
src/arm_eye/: CMakeLists.txt  package.xml
src/arm_eye/include/chemicalrobot_arm/: dashboard.h  motion_planning.h
src/arm_eye/launch/: record.launch  ur5e_js.launch
src/arm_eye/scripts/: data.txt  data_kjg0713.txt  data_kjg0714.txt  data_kjg_718.txt  data_kjg_719.txt  data_kjg_7191.txt  eye_in_hand_calibration.py  hand_eye_calibration.py
src/arm_eye/scripts/datas/: data_kjg_7201.txt  data_sys_08031.txt
src/arm_eye/src/: dashboard.cpp  eye_in_hand_cal.cpp  motion_planning.cpp  motion_planning_util.cpp  mytest.cpp  record.cpp
src/arm_eye/src/eye/: eye.cpp
src/locator/: CMakeLists.txt  README.md  package.xml
src/locator/config/: rosconsole.config
src/locator/launch/: cv_locator.launch
src/locator/msg/: BlackPoint3D.msg  RackHole.msg
src/locator/src/: chemist_visual_system_v5.cpp  robot_order.cpp
src/robot_message_bridge/: CMakeLists.txt  package.xml
src/robot_message_bridge/config/: param copy.json  param-203.154.json  param.json  param_0626_bak.json  station_mapping.json  status.json  workstataion_operations.json  workstation_plot.json
src/robot_message_bridge/launch/: flask_server_bridge.launch  robot_message_bridge.launch  robot_message_bridge_test.launch  ui_server.launch
src/robot_message_bridge/scripts/: RCS接口调用系统说明文档.md  agv_tasklist_manager.py  dms_to_robot.py  dms_to_robot_add_hk.py  dms_to_robot_backup.py  dms_to_robot_no_arm.py  dms_to_robot_test.py  hik_flask_server.py  robot_common_log.py  robot_commu_node.py  robot_flask_server.py  robot_mqtt_host.py  station_marker.py  voide_broadcast.py  wrapped_socket.py
src/robot_message_bridge/scripts/digital_twin/: data.txt  digital_twin_mqtt_pub.py
src/robot_message_bridge/scripts/start_gui/: robot_desktop.sh  ui_flask_server.py  ui_server.py  ui_server.zsh  ui_web.py  ui_web.ui
src/robot_message_bridge/start_sh/: start.sh
src/web_video_server/launch/: web_video_server.launch
src/web_video_server/src/: jpeg_streamers.cpp  web_video_server.cpp
src/设备使用和故障排查说明文档/: 定位使用.docx  实验机器人视觉系统说明文档.docx  导航说明.docx  测试demo任务管理节点启动命令.txt
(+227 files in other folders)
